# ResearchFlow_AI

./: README.md  SRS.md  bot.py  pyproject.toml
my_agent/: .env.example  __init__.py  agent.py  env.py  llm_config.py  prompt.py
my_agent/backend/: adk_runner.py  main.py  telegram.py  telegram_messages.py
my_agent/sub_agents/academic_newresearch/: __init__.py  agent.py  prompt.py
my_agent/sub_agents/academic_webresearch/: __init__.py  agent.py  prompt.py
