[project]
name = "reasearchflow-ai"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.29.0",
    "fastapi>=0.139.0",
    "google-adk==2.3.0",
    "httpx>=0.28.1",
    "litellm>=1.75.5",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "uvicorn>=0.51.0",
]
